[package]
name = "lru-mem"
description = "An LRU cache implementation bounded by memory."
version = "0.1.2"
authors = [ "florian1345 <florian1345@gmx.de>" ]
edition = "2021"
documentation = "https://docs.rs/lru-mem/"
license = "MIT OR Apache-2.0"
categories = [ "data-structures" ]
readme = "README.md"
repository = "https://github.com/florian1345/lru-mem"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hashbrown = { version = "0.11", features = [ "raw" ] }

[dev-dependencies]
criterion = "0.3"
rand = "0.8"

[[bench]]
name = "bench"
harness = false

[profile.bench]
opt-level = 3
lto = true
